[metadata]
name = pingparser
version = 0.3
author = Gregg Gajic
author_email = gregg.gajic@gmail.com
summary = Parses the output of the system ping command.
description-file = README.rst
home_page = https://github.com/gg/pingparser
project_url =
  Source repository,https://github.com/gg/pingparser
license = UNLICENSE
maintainer = Gregg Gajic
maintainer-email = gregg.gajic@gmail.com
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Natural Language :: English
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.1
  Programming Language :: Python :: 3.2
  Programming Language :: Python :: 3.3
  Programming Language :: Python :: 3.4
  Topic :: Software Development :: Libraries :: Python Modules
  License :: Public Domain

requires-dist = distutils2
Requires-Python: >= 2.7
Download-URL = http://pypi.python.org/pypi/pingparser

[files]
modules = pingparser
extra_files =
  setup.py
  README.rst
  MANIFEST.in
  tox.ini
  UNLICENSE
