[metadata]
name = pingparser
version = 0.4
author = Gregg Gajic
author_email = gregg.gajic@gmail.com
summary = Parses the output of the system ping command.
description-file = README.rst
home_page = https://github.com/ssteinerx/pingparser
project_url =
  Source repository,https://github.com/ssteinerx/pingparser
license = UNLICENSE
maintainer = Steve Steiner
maintainer-email = ssteinerX@gmail.com
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Natural Language :: English
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Topic :: Software Development :: Libraries :: Python Modules
  License :: Public Domain

requires-dist =
Requires-Python: >= 2.7
Download-URL = http://pypi.python.org/pypi/pingparser

[files]
modules = pingparser
extra_files =
  setup.py
  README.rst
  MANIFEST.in
  tox.ini
  UNLICENSE
